--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
                 <div class="portfolioTextDiv">
                     <div class="portName">Portfolio v2<div class="portNameUnderline" id="underline6"></div> </div>
                     <div class="portType"><t class="sb">Public Project</t></div>
-                    <div class="portDescription">An accumulation of what I've learned so far and some of the products of it.</div>
+                    <div class="portDescription">An accumulation of what I've learned so far and its products.</div>
                     <div class="portTasks">- Designed the whole website from top to bottom.<br>- Used GSAP and ScrollTriggers to ensure that animations are done on time.<br>- Created all 3D assets and managed everything so that users can have an immersive and interactive experience.</div>
                     <div class="portNotes">I really enjoyed working on this and I believe that it represents me well as an individual and as a developer.</div>
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
