--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                     <div class="sideNote">It's always the little things that make a site awesome.</div>
                 </div>
                 <div class="descriptionDiv hidden" id="threeDDesc">
-                    <div class="topDescription">I design and create 3D Models with Fusion 360.</div>
+                    <div class="topDescription">Ever since college, I design and create 3D Models with Fusion 360.</div>
                     <div class="botDescription">With Blender and Inkscape, these models can be put on the web.</div>
                     <div class="sideNote">We live in a 3D world after all.</div>
                 </div>
@@ -114,8 +114,8 @@
             <div class="middleScrollDiv">
                 <div class="topSliderText sliderTextSize">HTML + CSS + JavaScript</div>
                 <div class="botSliderText sliderTextSize">GLSL + Three.js + GSAP</div>
-                <div class="leftSliderText sideSliderTextSize">Learning<br> React,</div>
-                <div class="rightSliderText sideSliderTextSize">R3F,<br>and shaders</div>
+                <div class="leftSliderText sideSliderTextSize">Learning React,<br>R3F and shaders</div>
+                <div class="rightSliderText sideSliderTextSize"></div>
                 
                 <div class="scrollTop" id="scrollTop1">FRONT-END</div>
                 <div class="scrollTop" id="scrollTop2">FRONT-END</div>
