--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                 <div class="scrollBottom" id="scrollBottom3">FRONT-END</div>
                 <div class="scrollBottom" id="scrollBottom4">FRONT-END</div>
             </div>
-            <div class="topSkillsText topSkillsMove extraSkillsTextSize">It's amazing to think<br>that a few lines of code can<br>allow us to create something tangible,<br>with a few more, something beautiful</div>
+            <div class="topSkillsText topSkillsMove extraSkillsTextSize">It's amazing to think<br>that a few lines of code can<br>allow us to create something visual,<br>with a few more, something beautiful</div>
             <div class="botSkillsText botSkillsMove  extraSkillsTextSize">— and with the right tools,<br>something unforgettable.<br><br></div>
         </div>
         <div id="portfolioSection">
