Added Lotus Animations

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                 <div class="descriptionDiv" id="default">
                     <div class="topDescription">Get to know me better through this room.</div>
                     <div class="botDescription">Explore and click on objects.</div>
-                    <div class="sideNote">(or pick one from the list)</div>
+                    <div class="sideNote">(or pick a topic from the list)</div>
                 </div>
                 <div class="descriptionDiv hidden" id="techDesc">
                     <div class="topDescription">I mainly code with the holy trinity of web development:<br>HTML, CSS & JavaScript.</div>
@@ -127,7 +127,7 @@
                 <div class="scrollBottom" id="scrollBottom3">FRONT-END</div>
                 <div class="scrollBottom" id="scrollBottom4">FRONT-END</div>
             </div>
-            <div class="topSkillsText topSkillsMove extraSkillsTextSize">It's amazing to think<br>that a few lines of code can<br>allow us to create something visual,<br>with a few more, something beautiful</div>
+            <div class="topSkillsText topSkillsMove extraSkillsTextSize">It's amazing to think<br>that a few lines of code can<br>allow us to create something visual,<br>with a few more, something beautiful —</div>
             <div class="botSkillsText botSkillsMove  extraSkillsTextSize">— and with the right tools,<br>something unforgettable.<br><br></div>
         </div>
         <div id="portfolioSection">
