--- a/src/index.html
+++ b/src/index.html
@@ -136,8 +136,8 @@
                     <div class="portName">Flagle <div class="portNameUnderline" id="underline1"></div> </div>
                     <div class="portType"><t class="sb">Public Project</t> <t class="sb">Collab with Simon Clemente</t></div>
                     <div class="portDescription">Flagle is basically a guess-who game for flags.</div>
-                    <div class="portTasks">- Conceptualized game mechanics & features<br>- Mainly worked on the layout, design and content of the site.</div>
-                    <div class="portNotes">My first ever live project that has already reached over 200,000 people across the world.</div>
+                    <div class="portTasks">- Conceptualized game mechanics & features<br>- Mainly worked on the layout, design and content of the site.<br>- Reached over 200,000 people all over the world.</div>
+                    <!-- <div class="portNotes">My first ever live project that has already reached over 200,000 people across the world.</div> -->
                     <div class="portSkills">HTML + CSS + JavaScript</div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                     <div class="portType"><t class="sb">UI Study</t> <t class="sb">Collab with Gabriel Pineda</t></div>
                     <div class="portDescription">A UI case study for implementing a non-conventional image carousel.</div>
                     <div class="portTasks">- Dived deeper into vertex shaders, animations and interactions.<br>- Visualized overall carousel and rough website look.</div>
-                    <div class="portNotes">Conclusions: The carousel is a refreshing concept for image displays. Text or content will greatly improve the flow and overall look of the website.</div>
+                    <!-- <div class="portNotes">Conclusions: The carousel is a refreshing concept for image displays. Text or content will greatly improve the flow and overall look of the website.</div> -->
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                     <div class="portType"><t class="sb">UI Study</t></div>
                     <div class="portDescription">A UI concept for Love Death + Robots' best episodes with a highlight object(orange robot).</div>
                     <div class="portTasks">- Modelled the robot to continuously animate and change screen texture.<br>- Implemented a lot of GSAP animations and ScrollTriggers to correctly manipulate the robot.</div>
-                    <div class="portNotes">Conclusions: The robot head can make the user feel a sense of vastness in the website specially since it is set in outer space. The robot transition and screen animations give life to the site.</div>
+                    <!-- <div class="portNotes">Conclusions: The robot head can make the user feel a sense of vastness in the website specially since it is set in outer space. The robot transition and screen animations give life to the site.</div> -->
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     <div class="portType"><t class="sb">Design Study</t></div>
                     <div class="portDescription">A challenge to design and create a website with Nacho Varga as the subject in only 24 hours.</div>
                     <div class="portTasks">- Came up with the theme, colors and fonts, so I had to experiment a lot on those.<br>- Implemented a ripple and texture-change effect on meshes.</div>
-                    <div class="portNotes">Conclusions: Designing a website is a completely different and equally important field in web development. This exercise has given me a general sense of how I design websites.</div>
+                    <!-- <div class="portNotes">Conclusions: Designing a website is a completely different and equally important field in web development. This exercise has given me a general sense of how I design websites.</div> -->
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     <div class="portType"><t class="sb">Shader Study</t></div>
                     <div class="portDescription">A website to create and better understand Noise and Fragment Shaders.</div>
                     <div class="portTasks">- Tweaked a lot of values and ran the code multiple times to really understand what was happening with the fragment shader.<br>- Created a simple UI to allow users to change values and see results on the spot.</div>
-                    <div class="portNotes">Conclusions: I found noise to be pretty fascinating. There's something about the chaos that is just beautiful to me. Will definitely try to implement them in a project soon.</div>
+                    <!-- <div class="portNotes">Conclusions: I found noise to be pretty fascinating. There's something about the chaos that is just beautiful to me. Will definitely try to implement them in a project soon.</div> -->
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js</div>
                 </div>
             </div>
@@ -187,13 +187,13 @@
                     <div class="portType"><t class="sb">Public Project</t></div>
                     <div class="portDescription">An accumulation of what I've learned so far and its products.</div>
                     <div class="portTasks">- Designed the whole website from top to bottom.<br>- Used GSAP and ScrollTriggers to ensure that animations are done on time.<br>- Created all 3D assets and managed everything so that users can have an immersive and interactive experience.</div>
-                    <div class="portNotes">I really enjoyed working on this and I believe that it represents me well as an individual and as a developer.</div>
+                    <!-- <div class="portNotes">I really enjoyed working on this and I believe that it represents me well as an individual and as a developer.</div> -->
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
                 </div>
             </div>
         </div>
         <div class="section" id="contactSection">
-            <a href="mailto:rptmunar@gmail.com" class="link" tabindex="-1" id="emailText">Wanna talk?</a>
+            <a href='mailto:rptmunar@gmail.com' class='link' tabindex='-1' id='emailText'>Wanna talk?</a>
         </div>
     </div>
 </body>
