--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
             <div class="middleScrollDiv">
                 <div class="topSliderText sliderTextSize">HTML + CSS + JavaScript</div>
                 <div class="botSliderText sliderTextSize">GLSL + Three.js + GSAP</div>
-                <div class="leftSliderText sideSliderTextSize">Learning React,<br>R3F and shaders</div>
+                <div class="leftSliderText sideSliderTextSize">3D: Fusion 360 + Blender + Inkscape<br>Learning: React + R3F + shaders</div>
                 <div class="rightSliderText sideSliderTextSize"></div>
                 
                 <div class="scrollTop" id="scrollTop1">FRONT-END</div>
