Added drawer objects

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Frank+Ruhl+Libre&family=Merriweather:wght@200&family=Nunito:wght@400&family=Oi&family=Orbitron&family=Raleway:wght@500&family=Spectral:ital,wght@1,800&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cedarville+Cursive&family=Frank+Ruhl+Libre&family=Merriweather:wght@200&family=Monoton&family=Nunito:wght@200&family=Oi&family=Orbitron&family=Raleway:wght@500&family=Spectral:ital,wght@1,800&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/ScrollTrigger.min.js"></script>	
 </head>
 <body>
@@ -40,9 +39,9 @@
     </div>
 
     <div class="back half topLanding">
-        <div class="large Oi">Hel<t class="message">l</t>o.</div>
-        <div class="large Oi">am</div>
-        <div class="middleAlways"><t class="message Oi">i</t></div>
+        <div class="large Spectral">Hel<t class="message">l</t>o.</div>
+        <div class="large Spectral">am</div>
+        <div class="middleAlways"><t class="message Spectral">i</t></div>
     </div>
  
     <canvas class="mainCanvas"></canvas>
@@ -56,7 +55,7 @@
     <div class="slider">
         <div class="section" id="landingSection">
             <div class="half topLanding">
-                <div class="middleAlways"><t class="message Oi">i</t></div>
+                <div class="middleAlways"><t class="message Spectral">i</t></div>
             </div>
             <div class="front half botLanding">
                 <div class="left">
@@ -218,7 +217,14 @@
             </div>
         </div>
         <div class="section" id="contactSection">
-            <a href='mailto:rptmunar@gmail.com' class='link' tabindex='-1' id='emailText'>Wanna talk?</a>
+            <div id="gumSection">
+                <div class="gumText Spectral">
+                    I came here to<t class="Monoton">&nbsp;&nbsp;CENTER DIVS&nbsp;&nbsp;</t> &<t class="Cerdaville">&nbsp;chew gum&nbsp;</t> <t class="redGum">.</t><t class="blueGum">.</t><t class="yellowGum">.</t>
+                </div> 
+            </div>
+            <div id="finalSection">
+                <a href='mailto:rptmunar@gmail.com' class='link' tabindex='-1' id='emailText'>Wanna talk?</a>
+            </div>
         </div>
     </div>
 </body>
