--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cedarville+Cursive&family=Frank+Ruhl+Libre&family=Merriweather:wght@200&family=Monoton&family=Nunito:wght@200&family=Oi&family=Orbitron&family=Raleway:wght@500&family=Spectral:ital,wght@1,800&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/ScrollTrigger.min.js"></script>	
+
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⬛</text></svg>">
 </head>
 <body>
     <div class="loadingPage">
