Added Smooth Scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⬛</text></svg>">
 </head>
-<body>
+<body id="bodyScrollbar">
     <div class="loadingPage">
         <div class="mainLoadingDiv">
             <div class="halfLoadingBar" id="allDone">
@@ -47,6 +47,7 @@
     </div>
  
     <canvas class="mainCanvas"></canvas>
+    
     <div class="navBar">
         <div class="navTabs currentTab" id="nav1">HOME</div>
         <div class="navTabs" id="nav2">ABOUT ME</div>
@@ -54,6 +55,7 @@
         <div class="navTabs" id="nav4">PROJECTS</div>
         <div class="navTabs" id="nav5">CONTACT</div>
     </div>
+
     <div class="slider">
         <div class="section" id="landingSection">
             <div class="half topLanding">
