--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,9 @@
     </div>
 
     <div class="back half topLanding">
-        <div class="large Spectral">Hel<t class="message">l</t>o.</div>
-        <div class="large Spectral">am</div>
-        <div class="middleAlways"><t class="message Spectral">i</t></div>
+        <div class="large hello Spectral">Hel<t class="message">l</t>o.</div>
+        <div class="large am Spectral">am</div>
+        <div class="middleAlways I"><t class="message Spectral">i</t></div>
     </div>
  
     <canvas class="mainCanvas"></canvas>
@@ -59,7 +59,7 @@
     <div class="slider">
         <div class="section" id="landingSection">
             <div class="half topLanding">
-                <div class="middleAlways"><t class="message Spectral">i</t></div>
+                <div class="middleAlways I"><t class="message Spectral">i</t></div>
             </div>
             <div class="front half botLanding">
                 <div class="left">
