Change zoomFactor and Color Change

--- a/src/index.html
+++ b/src/index.html
@@ -155,8 +155,8 @@
                 <div class="scrollBottom" id="scrollBottom3">FRONT-END</div>
                 <div class="scrollBottom" id="scrollBottom4">FRONT-END</div>
             </div>
-            <div class="topSkillsText topSkillsMove extraSkillsTextSize">It's amazing to think<br>that a few lines of code can<br>allow us to create something visual,<br>with a few more, something beautiful —</div>
-            <div class="botSkillsText botSkillsMove  extraSkillsTextSize">— and with the right tools,<br>something unforgettable.<br><br></div>
+            <div class="topSkillsText topSkillsMove extraSkillsTextSize"><t>It's amazing to think<br>that a few lines of code can<br>allow us to create something visual,<br>with a few more, something beautiful&nbsp;<b class="dash">—</b></t></div>
+            <div class="botSkillsText botSkillsMove  extraSkillsTextSize"><t><b class="dash">—</b>&nbsp;and with the right tools,<br>something unforgettable.</t><br><br></div>
         </div>
         <div id="portfolioSection">
             <div class="portfolioEntry" id="entry1">
