--- a/src/index.html
+++ b/src/index.html
@@ -49,11 +49,11 @@
     <canvas class="mainCanvas"></canvas>
     
     <div class="navBar">
-        <div class="navTabs currentTab" id="nav1" tabindex="1">HOME</div>
-        <div class="navTabs" id="nav2" tabindex="2">ABOUT ME</div>
-        <div class="navTabs" id="nav3" tabindex="3">SKILLS</div>
-        <div class="navTabs" id="nav4" tabindex="4">PROJECTS</div>
-        <div class="navTabs" id="nav5" tabindex="5">CONTACT</div>
+        <div class="navTabs currentTab" id="nav1">HOME</div>
+        <div class="navTabs" id="nav2">ABOUT ME</div>
+        <div class="navTabs" id="nav3">SKILLS</div>
+        <div class="navTabs" id="nav4">PROJECTS</div>
+        <div class="navTabs" id="nav5">CONTACT</div>
     </div>
 
     <div class="slider">
