--- a/src/index.html
+++ b/src/index.html
@@ -145,15 +145,15 @@
                 <div class="leftSliderText sideSliderTextSize">3D: Fusion 360 + Blender + Inkscape<br>Learning: React + R3F + shaders</div>
                 <div class="rightSliderText sideSliderTextSize"></div>
                 
-                <div class="scrollTop" id="scrollTop1">FRONT-END</div>
-                <div class="scrollTop" id="scrollTop2">FRONT-END</div>
-                <div class="scrollTop" id="scrollTop3">FRONT-END</div>
-                <div class="scrollTop" id="scrollTop4">FRONT-END</div>
+                <div class="scrollTop seeThrough" id="scrollTop1">FRONT-END</div>
+                <div class="scrollTop seeThrough" id="scrollTop2">FRONT-END</div>
+                <div class="scrollTop seeThrough" id="scrollTop3">FRONT-END</div>
+                <div class="scrollTop seeThrough" id="scrollTop4">FRONT-END</div>
                 <div class="scrollMainText">FRONT-END</div>
-                <div class="scrollBottom" id="scrollBottom1">FRONT-END</div>
-                <div class="scrollBottom" id="scrollBottom2">FRONT-END</div>
-                <div class="scrollBottom" id="scrollBottom3">FRONT-END</div>
-                <div class="scrollBottom" id="scrollBottom4">FRONT-END</div>
+                <div class="scrollBottom seeThrough" id="scrollBottom1">FRONT-END</div>
+                <div class="scrollBottom seeThrough" id="scrollBottom2">FRONT-END</div>
+                <div class="scrollBottom seeThrough" id="scrollBottom3">FRONT-END</div>
+                <div class="scrollBottom seeThrough" id="scrollBottom4">FRONT-END</div>
             </div>
             <div class="topSkillsText topSkillsMove extraSkillsTextSize"><t>It's amazing to think<br>that a few lines of code can<br>allow us to create something visual,<br>with a few more, something beautiful&nbsp;<b class="dash">—</b></t></div>
             <div class="botSkillsText botSkillsMove  extraSkillsTextSize"><t><b class="dash">—</b>&nbsp;and with the right tools,<br>something unforgettable.</t><br><br></div>
