--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,21 @@
             </div>
             <div class="portfolioEntry" id="entry2">
                 <div class="portfolioTextDiv">
-                    <div class="portName">Gabito<div class="portNameUnderline" id="underline2"></div> </div>
+                    <div class="portName">Effects Study<div class="portNameUnderline" id="underline2"></div> </div>
+                    <div class="portType"><t class="sb">Case Studies</t></div>
+                    <div class="portDescription">A compilation of cool effects I made for the web as I learn.</div>
+                    <div class="portTasks">- Heavily inspired by Yuri Artiukh's videos and streams.</div>
+                    <div class="portNotes">
+                        <a target=”_blank” href='https://ordernchaos.patrickmunar.com/' class='linkProject' tabindex='-1'>ordernchaos.patrickmunar.com</a><br><br><br>
+                        <a target=”_blank” href='https://pixelatedgravity.patrickmunar.com/' class='linkProject' tabindex='-1'>pixelatedgravity.patrickmunar.com</a><br><br><br>
+                        <a target=”_blank” href='https://rgbsplits.patrickmunar.com/' class='linkProject' tabindex='-1'>rgbsplits.patrickmunar.com</a>
+                    </div>
+                    <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
+                </div>
+            </div>
+            <div class="portfolioEntry" id="entry3">
+                <div class="portfolioTextDiv">
+                    <div class="portName">Gabito<div class="portNameUnderline" id="underline3"></div> </div>
                     <div class="portType"><t class="sb">UI Study</t> <t class="sb">Collab with Gabriel Pineda</t></div>
                     <div class="portDescription">A UI case study for implementing a non-conventional image carousel.</div>
                     <div class="portTasks">- Dived deeper into vertex shaders, animations and interactions.<br>- Visualized overall carousel and rough website look.</div>
@@ -183,26 +197,14 @@
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
                 </div>
             </div>
-            <div class="portfolioEntry" id="entry3">
+            <div class="portfolioEntry" id="entry4">
                 <div class="portfolioTextDiv">
-                    <div class="portName">LD+R<div class="portNameUnderline" id="underline3"></div> </div>
+                    <div class="portName">LD+R<div class="portNameUnderline" id="underline4"></div> </div>
                     <div class="portType"><t class="sb">UI Study</t></div>
                     <div class="portDescription">A UI concept for Love Death + Robots' best episodes with a highlight object(orange robot).</div>
                     <div class="portTasks">- Modelled the robot to continuously animate and change screen texture.<br>- Implemented a lot of GSAP animations and ScrollTriggers to correctly manipulate the robot.</div>
                     <div class="portNotes">
                         <a target=”_blank” href='https://ldr.patrickmunar.com/' class='linkProject' tabindex='-1'>ldr.patrickmunar.com</a>
-                    </div>
-                    <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
-                </div>
-            </div>
-            <div class="portfolioEntry" id="entry4">
-                <div class="portfolioTextDiv">
-                    <div class="portName">Nacho<div class="portNameUnderline" id="underline4"></div> </div>
-                    <div class="portType"><t class="sb">Design Study</t></div>
-                    <div class="portDescription">A challenge to design and create a website with Nacho Varga as the subject in only 24 hours.</div>
-                    <div class="portTasks">- Came up with the theme, colors and fonts, so I had to experiment a lot on those.<br>- Implemented a ripple and texture-change effect on meshes.</div>
-                    <div class="portNotes">
-                        <a target=”_blank” href='https://nacho.patrickmunar.com/' class='linkProject' tabindex='-1'>nacho.patrickmunar.com</a>
                     </div>
                     <div class="portSkills">HTML + CSS + JavaScript + GLSL + Three.js + GSAP</div>
                 </div>
